--- a/style/mapstyle.css
+++ b/style/mapstyle.css
@@ -17,18 +17,12 @@
 }
 
 
-.tooltipTitle {
-    font-size: 18px;
-}
 
-.tooltipValue {
-    font-size: 12px;
-}
 
 .popup {
     background-color: white;
     margin: 5px;
-    height: 55%;
+    overflow: auto;
     width: 35%;
     left: 5%;
     top: 15%;
@@ -42,13 +36,15 @@
 
 h3{
     width:50%;
+    margin:2px;
 }
 #popupTitle{
     display:inline;
 }
 #popupWrapper {
     position: relative;
-    padding: 40px;
+    padding: 30px;
+    overflow: auto;
 }
 
 #popUpClose {
@@ -56,8 +52,8 @@ h3{
     position: absolute;
     width: 25px;
     height: 25px;
-    top: 20px;
-    right: 20px;
+    top: 10px;
+    right: 10px;
 }
 
 #popUpClose:hover {
@@ -76,6 +72,22 @@ h3{
 
 #popupContent {
     text-align: justify;
+}
+
+.tooltipTitle {
+    font-size: 18px;
+}
+
+.tooltipDistrictName{
+    font-weight: bold;
+    font-size: 17px;
+}
+
+
+
+
+#tooltipColumn{
+    font-size:14px;
 }
 
 .brown {
